# SDLGLTriangle2024

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
